--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-resource": "^1.5.8",
     "angular-ui-router": "^0.3.1",
     "angular-jwt": "^0.0.9",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1"
   }
 }
